Add event hosts management
Refs #994
